--- a/src/styles/memory.css
+++ b/src/styles/memory.css
@@ -9,10 +9,28 @@ body {
     min-height: 100vh;
 }
 
+.title {
+    font-size: 40px;
+    font-family: sans-serif;
+    padding: 10px;
+}
+
+h1 {
+    margin: 0;
+    padding: 0;
+}
+
+.scoreboard {
+    font-size: 20px;
+}
 .header {
     background-color: orange;
     height: 130px;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .main {
