--- a/src/styles/memory.css
+++ b/src/styles/memory.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Runescape;
+    src: url("../fonts/runescape.ttf");
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -11,8 +16,8 @@ body {
 
 .title {
     font-size: 40px;
-    font-family: sans-serif;
-    padding: 10px;
+    font-family: Runescape;
+    color: yellow;
 }
 
 h1 {
@@ -22,15 +27,19 @@ h1 {
 
 .scoreboard {
     font-size: 20px;
-}
-.header {
-    background-color: orange;
-    height: 130px;
-    width: 100vw;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+.header {
+    background-color: brown;
+    height: 140px;
+    width: 100vw;
+    display: flex;
     justify-content: center;
     align-items: center;
+    gap: 20px;
 }
 
 .main {
