--- a/src/styles/memory.css
+++ b/src/styles/memory.css
@@ -31,30 +31,46 @@ h1 {
     flex-direction: column;
     align-items: center;
     padding: 10px;
+    position: relative;
+    margin-bottom: -80px;
+    z-index: 1;
 }
 .header {
-    background-color: brown;
+    background-color: #312A19;
     height: 140px;
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    box-shadow: 0 3px 5px #312A19;
+    z-index: 1;
 }
 
 .main {
-    background-color: pink;
+    background-color: #99855D;
     height: 130px;
     width: 100vw;
     flex: 1;
 }
 
-.footer {
-    background-color: blueviolet;
+footer {
+    background-color: #312A19;
     height: 50px;
     width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    gap: 10px;
+    font-family: Runescape;
+    color: yellow;
 }
 
+footer > a {
+    text-decoration: none;
+    color: yellow;
+}
 .card-image {
     height: 200px;
     width: 200px;
@@ -70,8 +86,26 @@ h1 {
 
 .card {
     padding: 10px;
+    font-family: Runescape;
+    font-size: 18px;
 }
 
 .card:hover {
     cursor: pointer;
 }
+
+.card-title {
+    margin-top: 15px;
+}
+
+.current-score, .best-score {
+    position: relative;
+    bottom: 85px;
+    font-family: Runescape;
+    font-size: 20px;
+}
+
+.score-background {
+    height: 120px;
+}
+
