--- a/src/styles/memory.css
+++ b/src/styles/memory.css
@@ -31,20 +31,26 @@ h1 {
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    position: relative;
-    margin-bottom: -80px;
-    z-index: 1;
+    margin-top: 30px;
+    margin-right: 10px;
 }
 .header {
     background-color: #312A19;
     height: 140px;
     width: 100vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     gap: 20px;
     box-shadow: 0 3px 5px #312A19;
     z-index: 1;
+}
+
+.header-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
 .main {
